Dosage 2.0 (released xx.xx.2013)


Dosage 1.15 (released 1.4.2013)

Features:
- comics: Added DrMcNinja, Schuelert.
- output: Added a new JSON output logger.

Changes:
- comics: Add better source for HagarTheHorrible
  Closes: GH bug #21
- output: Display error traceback information in verbose mode.

Fixes:
- comics: Fixed GoComics by downloading zoomed images,
  fixed WorlWorldSaga* and Eriadan, and removed DerFlix.


Dosage 1.14 (released 21.3.2013)

Features:
- comics: Added KeenSpot comic strips and enable ComicGenesis
  comic strips
- comics: Added CucumberQuest, DasLebenIstKeinPonyHof, DemolitionSquad,
  DerFlix, DerTodUndDasMaedchen, DogHouseDiaries, FonFlatter,
  FullFrontalNerdity, GeeksNextDoor, Hipsters, KatzenfutterGeleespritzer,
  KickInTheHead, MyCartoons, OrnerBoy, ParallelUniversum, Ruthe,
  SandraAndWooGerman, WormWorldSaga.
  Closes: GH bug #15, #19

Changes:
- comics: The scraper can check a list of previous and image link
  regular expressions, not only a single one.
- comics: Continue searching for images if one image is not found.
  Closes: GH bug #18

Fixes:
- comics: Fix dilbert image naming.
  Closes: GH bug #20


Dosage 1.13 (released 11.3.2013)

Features:
- comics: Added comic strips AhoiPolloi, AxeCop, Bearmageddon, DeadWinter,
  HarkAVagrant, IAmArg, LoadingArtist, Nnewts, PHDComics, PokeyThePenguin,
  SnowFlame, WorldOfMrToast and Zwarwald.

Changes:
- cmdline: Comic lists are displayed one page at a time.
- output: HTML output embeds the images in the page and show the page URLs.
- output: The --output option can be given multiple times.

Fixes:
- cmdline: Catch error when piping output to another
  program or file under Windows.
  Closes: GH bug #13
- cmdline: Catch error when multiple comics match.
  Closes: GH bug #16
- comics: Retry download on empty content to reduce empty file errors.
- comics: Don't save thumbnails in LookingForGroup
  Closes: GH bug #17


Dosage 1.12 (released 4.3.2013)

Features: