@@ -66,9 +66,6 @@ def setupOptions():
         epilog = Examples,
         formatter_class=argparse.RawDescriptionHelpFormatter,
     )
-    if sys.argv[0].endswith("mainline"):
-        out.warn("the 'mainline' program is deprecated, please use the new 'dosage' program")
-        kwargs["prog"] = "dosage"
     parser = ArgumentParser(**kwargs)
     parser.add_argument('-v', '--verbose', action='count', default=0, help='provides verbose output, use multiple times for more verbosity')
     parser.add_argument('-n', '--numstrips', action='store', type=int, default=0, help='traverse and retrieve the given number of comic strips; use --all to retrieve all comic strips')
